# m20pro-ros2-real

./: .gitignore  CONTRIBUTING.md  README.md  m20pro日志.md
src/m20pro_bringup/: CMakeLists.txt  package.xml
src/m20pro_bringup/behavior_trees/: m20pro_navigate_to_pose_foxy.xml  m20pro_stair_traverse_foxy.xml
src/m20pro_bringup/config/: inspection_waypoints.yaml  m20pro.yaml  m20pro_fastdds_udp.xml  m20pro_field_profile.yaml  m20pro_real.yaml  map_manifest.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  runtime_navigation.yaml
src/m20pro_bringup/launch/: m20pro.launch.py  m20pro_real.launch.py  m20pro_sim.launch.py  m20pro_web_dashboard.launch.py  nav2_navigation_real_foxy.launch.py
src/m20pro_bringup/rviz/: m20pro_navigation.rviz  m20pro_sim.rviz
src/m20pro_bringup/scripts/: m20pro_lidar_guard.sh  m20pro_lidar_relay_guard.sh  m20pro_real_full.sh  m20pro_real_nav.sh  m20pro_real_web.sh  m20pro_record_real.sh  m20pro_runtime_snapshot.sh
src/m20pro_navigation/: package.xml  setup.cfg  setup.py
src/m20pro_navigation/m20pro_navigation/: charge_command_contract.py  command_mux_contract.py  command_mux_node.py  config_audit_node.py  control_gui.py  dual_lidar_simulator.py  dynamic_obstacle_simulator.py  field_profile_contract.py  floor_goal_bridge.py  floor_manager.py  geometry.py  grid_planner_node.py  initialpose_3d_adapter.py  lidar_relay_node.py  lidar_simulator.py  map_editor.py  map_manifest.py  nav2_startup_gate.py  navigation_scan_selector.py  odom_alignment_contract.py  path_follower_node.py  pointcloud_fusion.py  pose_stability_contract.py  scan_recording_relay.py  (+15 more)
(+196 files in other folders)
